classDiagram

    class Cluster {
        - start: int
        - end: int
        - cluster_tag_: kClusterTag
    }

    Cluster --> Cluster : parent_cluster
    Cluster --> Cluster : nested_cluster
    
    class Block {
        - isWhile:bool
    }

    Block --> Block : prev_block
    Block --> Block : next_block

    Cluster <|-- Block

    Block <|-- ConditionalBlock
    Block <|-- BodyBlock

